changed app.component structure

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,19 @@
-<app-sidebar></app-sidebar>
+<!--Main Navigation-->
+<header>
+     <!-- sidebar -->
+  <app-sidebar></app-sidebar>
+     <!-- sidebar -->  
+    
+    <!-- Navbar -->
+    <app-navbar></app-navbar>
+    <!-- Navbar -->
+  </header>
+
+ <!--Main layout-->
+ <main style="margin-top: 58px">
+    <div class="container pt-4">
+        <router-outlet></router-outlet>
+    </div>
+  </main>
+  <!--Main layout-->
 
