--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1,1 +1,28 @@
-<p>navbar works!</p>
+<!-- Navbar -->
+<nav
+id="main-navbar"
+class="navbar navbar-expand-lg navbar-light bg-white fixed-top"
+>
+<!-- Container wrapper -->
+<div class="container-fluid">
+<!-- Toggle button -->
+<a
+       href="#sidebarMenu"
+       role="button"
+       data-bs-toggle="collapse"                
+       aria-controls="sidebarMenu"
+       aria-expanded="false"   
+       class="navbar-toggler me-3"             
+       >
+       <i class="bi bi-list" style="font-size:35px" ></i>
+</a>
+
+<!-- Brand -->
+<a class="navbar-brand" href="#">
+ <h2>BooksStack</h2>
+</a>
+
+
+</div>
+<!-- Container wrapper -->
+</nav>
